[package]
name = "gui"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.1"
tiny-portal = { path = "../portal" }
tokio = { version = "1", features = ["full"] }
log = "0.4.20"
