[package]
name = "gui"
version = "0.1.1"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.1"
tiny-portal = { path = "../portal" }
tokio = { version = "1", features = ["full"] }
log = "0.4.20"
eframe = { version = "0.26.0", features = ["persistence"] }
egui_extras = "0.26.0"
serde = "1.0.196"
dirs = "5.0.1"
ron = "0.8.1"
once_cell = "1.19.0"
